Refactor StreamPractice: replace collect(Collectors.toList()) with toList() Refactor CandidateValidator: change method access from public to private, introduce constants for comma, dash, and year indexes